--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -5,10 +5,10 @@
     <a class="nav-link" href="/prodverse/productionschedule">Production Schedule</a>
 </li>
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="itemLookupNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Item Lookup
     </a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <ul class="dropdown-menu" aria-labelledby="itemLookupNavbarDropdown">
     <li><a class="dropdown-item" href="/core/lookupitemquantity/">Item Quantity</a></li>
     <li><a class="dropdown-item" href="/core/lookuplocation/">Chemical Location</a></li>
     <li><a class="dropdown-item" href="/core/lookuplotnum/">Lot Numbers</a></li>
@@ -21,10 +21,10 @@
     <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
 </li>
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <a class="nav-link dropdown-toggle" href="#" id="blendAuditingNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Blend Auditing
     </a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <ul class="dropdown-menu" aria-labelledby="blendAuditingNavbarDropdown">
         <li><a class="dropdown-item" href="/core/chemshortages">Chemical Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blendshortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/productionblendruns/?page=1">Production Blend Runs</a></li>
