Add navbar link for Max Prod Qty.

--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -16,6 +16,7 @@
         <li><a class="dropdown-item" href="/core/blendshortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/productionblendruns/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/blendcountsheets">Blend Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/maxproduciblequantity">Max Producible Quantity</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blendschedule?blend_area=all">Scheduled Blends</a></li>
