--- a/app/templates/navbars/forklift-group-navbar-items.html
+++ b/app/templates/navbars/forklift-group-navbar-items.html
@@ -12,5 +12,6 @@
     <li><a class="dropdown-item" href="/core/lookupitemquantity/">Item Quantity</a></li>
     <li><a class="dropdown-item" href="/core/lookuplocation/">Chemical Location</a></li>
     <li><a class="dropdown-item" href="/core/lookuplotnum/">Lot Numbers</a></li>
+    <li><a class="dropdown-item" href="/prodverse/specsheet-lookup/">Spec Sheets</a></li>
     </ul>
 </li>
