--- a/app/core/templates/core/blendschedules/toteschedule.html
+++ b/app/core/templates/core/blendschedules/toteschedule.html
@@ -1,7 +1,7 @@
 <div class="scheduleHeader">
     <h1>Blend Schedule for Totes</h1>
     <br>
-    <a href="/core/blendschedule?blend_area=all">View All Schedules</a>
+    <a href="/core/blend-schedule?blend-area=all">View All Schedules</a>
     <br>
 </div>
 {% if tote_blends %}
