--- a/app/core/templates/core/checklistmgmt.html
+++ b/app/core/templates/core/checklistmgmt.html
@@ -34,17 +34,17 @@
                 <p>The checklist submission tracking table has been updated for today.</p>
             {% else %}
                 <p>The checklist submission tracking table has not been updated for today.</p>
-                <a href="/core/updateforkliftsubtracker">
+                <a href="/core/update-forklift-submission-tracker">
                     <button class="btn btn-secondary">Update Submission Tracker</button>
                 </a>
             {% endif %}
             </br>
-            <a href="/core/emailsubmissionreport?recipient=pmedlin@kinpakinc.com" id="emailSubmissionsLink">
+            <a href="/core/email-submission-report?recipient=pmedlin@kinpakinc.com" id="emailSubmissionsLink">
                 <button class="btn btn-secondary">Email Submission Report</button>
             </a>
             </br>
             </br>
-            <a href="/core/emailissuereport?recipient=pmedlin@kinpakinc.com" id="emailIssuesLink">
+            <a href="/core/email-issue-report?recipient=pmedlin@kinpakinc.com" id="emailIssuesLink">
                 <button class="btn btn-secondary">Email Issues Report</button>
             </a>
         </div>
