--- a/app/core/templates/core/chemshortages.html
+++ b/app/core/templates/core/chemshortages.html
@@ -104,10 +104,10 @@
         <div class='text-center'>
             <div id="page-links">
                 {% if current_page.has_previous %}
-                    <a href="/core/chemshortages/?page={{ current_page.previous_page_number }}">Previous Page</a>
+                    <a href="/core/chemical-shortages/?page={{ current_page.previous_page_number }}">Previous Page</a>
                 {% endif %}
                 {% if current_page.has_next %}
-                    <a href="/core/chemshortages/?page={{ current_page.next_page_number }}">Next Page</a>
+                    <a href="/core/chemical-shortages/?page={{ current_page.next_page_number }}">Next Page</a>
                 {% endif %}
             </div>
             <div>
