--- a/app/core/templates/core/forkliftchecklist.html
+++ b/app/core/templates/core/forkliftchecklist.html
@@ -54,9 +54,9 @@
     <script>
         $( 'select[name="forklift"]' ).change(function() {
             console.log("select");
-            let unit_number = $('select[name="forklift"] option:selected').text();
-            console.log(unit_number);
-            $.getJSON('/core/forklift-serial-request/',{unit_number:unit_number}, // send json request with forklift unit number in request url
+            let unitNumber = $('select[name="forklift"] option:selected').text();
+            console.log(unitNumber);
+            $.getJSON(`/core/forklift-serial-request/?unit-number=${unitNumber}`, // send json request with forklift unit number in request url
                     function(data) {
                         $('input[name="serial_number"]').val(data); // Update desc value
                     })
