--- a/app/core/templates/core/invalidforms/invalidlotnumber.html
+++ b/app/core/templates/core/invalidforms/invalidlotnumber.html
@@ -1,8 +1,8 @@
 <div id="invalidLotNumFormContainer">
     {% if submitted %}
-        <a href='/core/lotnumrecords'>View All Lot Numbers</a>
+        <a href='/core/lot-num-records'>View All Lot Numbers</a>
     {% else %}
-        <form action="/core/addlotnumrecord/lotnumrecords" method=POST>
+        <form action="/core/add-lot-num-record/lot-num-records" method=POST>
             {% csrf_token %}
             <table id="invalidlotnumformtable">
                 {{ lot_form }}
