--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -10,7 +10,7 @@
         <h1>Select Blends to Count</h1>
         <h5><em>Blends shown in order of appearance on production schedule</em></h5>
         <br/>
-        <a href="/core/countrecords/">View all count records</a>
+        <a href="/core/count-records/">View all count records</a>
         <br/>
         <button id="create_list">Create Count List</button>
         <br/>
