--- a/app/core/templates/core/modals/add-scheduleitem-modal.html
+++ b/app/core/templates/core/modals/add-scheduleitem-modal.html
@@ -10,7 +10,7 @@
         </div>
         <div id="addToScheduleFormContainer">
             {% if submitted %}
-                <a href='/core/lotnumrecords'>View All Lot Numbers</a>
+                <a href='/core/lot-num-records'>View All Lot Numbers</a>
             {% else %}
                 <div id="deskOneFormContainer">
                     <form id="deskOneForm" action="{% url 'add-lot-to-deskone-schedule'%}" method=POST>
