--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -290,7 +290,7 @@
           Open Tanks and Totes Sheet
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
-        <a href="http://192.168.178.169:1337/core/tanklevels/" class="icon-link d-inline-flex align-items-center">
+        <a href="http://192.168.178.169:1337/core/tank-levels/" class="icon-link d-inline-flex align-items-center">
           Open Tank Radar Levels Page
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
