--- a/app/prodverse/templates/prodverse/specsheet-lookup.html
+++ b/app/prodverse/templates/prodverse/specsheet-lookup.html
@@ -28,7 +28,7 @@
         <input type="text" id="id_item_description" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
         </br>
         </br>
-        <a id="id_specsheet_button_link" href="/prodverse/specsheet/">
+        <a id="id_specsheet_button_link" href="/prodverse/spec-sheet/">
             <button id="id_specsheet_button" class="btn btn-primary">Open Specsheet</button>
         </a>
     </div>
