--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -1,7 +1,7 @@
 <div class="scheduleHeader">
     <h1>Blend Schedule for Horix Line</h1>
     <br>
-    <a href="/core/blendschedule?blend_area=all">View All Schedules</a>
+    <a href="/core/blend-schedule?blend_arblend-areaea=all">View All Schedules</a>
     <br>
 </div>
 {% if horix_blends %}
