--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -10,7 +10,7 @@
         <p><em>Printed {{ todays_date|date:"m/d/y" }}</em></p>
     </div>
     {% if submitted %}
-        <a href='/core/countrecords/?page=1'></a>
+        <a href='/core/count-records/?page=1'></a>
     {% else %}
         <div>
             <form action="" method=POST>
@@ -39,7 +39,7 @@
                             {% endif %}
                         {% endfor %}
                         <td class="discardButtonCell text-center noPrint">
-                            <a class="discardButton noPrint" href="/core/deletecountrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
+                            <a class="discardButton noPrint" href="/core/delete-count-record/count-records/{{ encoded_list }}/{{ encoded_list }}">
                                 Delete
                             </a>
                         </td>
@@ -49,7 +49,7 @@
         </div>
         <div class="text-center buttonContainer noPrint">
             <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save Counts</button>
-            <a class="discardButton" href="/core/deletecountrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
+            <a class="discardButton" href="/core/delete-count-record/count-records/{{ encoded_list }}/{{ encoded_list }}">
                 Delete All
             </a>
         </div>
