--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
   {% if user.is_authenticated %}
     Hi {{ user.first_name }}!
     <br></br>
-    <a class="btn btn-secondary" href="/core/forkliftchecklist">Create New Forklift Log</a>
+    <a class="btn btn-secondary" href="/core/forklift-checklist">Create New Forklift Log</a>
   {% else %}
     <p class='text-left'>You are not logged in.</p>
     <a href="{% url 'login' %}">Log In</a>
