--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -1,44 +1,44 @@
 <li class="nav-item">
-    <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
+    <a class="nav-link" href="/core/forklift-checklist">Forklift Checklist</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="/prodverse/productionschedule">Production Schedule</a>
+    <a class="nav-link" href="/prodverse/production-schedule">Production Schedule</a>
 </li>
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="itemLookupNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Item Lookup
     </a>
     <ul class="dropdown-menu" aria-labelledby="itemLookupNavbarDropdown">
-    <li><a class="dropdown-item" href="/core/lookupitemquantity/">Item Quantity</a></li>
-    <li><a class="dropdown-item" href="/core/lookuplocation/">Chemical Location</a></li>
-    <li><a class="dropdown-item" href="/core/lookuplotnum/">Lot Numbers</a></li>
-    <li><a class="dropdown-item" href="/prodverse/specsheet-lookup/">Spec Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/lookup-item-quantity/">Item Quantity</a></li>
+        <li><a class="dropdown-item" href="/core/lookup-location/">Chemical Location</a></li>
+        <li><a class="dropdown-item" href="/core/lookup-lot-numbers/">Lot Numbers</a></li>
+        <li><a class="dropdown-item" href="/prodverse/spec-sheet-lookup/">Spec Sheets</a></li>
     </ul>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="/core/tanklevels">Tank Levels</a>
+    <a class="nav-link" href="/core/tank-levels">Tank Levels</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
+    <a class="nav-link" href="/core/lot-num-records">Lot Numbers</a>
 </li>
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="blendAuditingNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Blend Auditing
     </a>
     <ul class="dropdown-menu" aria-labelledby="blendAuditingNavbarDropdown">
-        <li><a class="dropdown-item" href="/core/chemshortages">Chemical Shortages</a></li>
-        <li><a class="dropdown-item" href="/core/blendshortages">Blend Shortages</a></li>
-        <li><a class="dropdown-item" href="/core/productionblendruns/?page=1">Production Blend Runs</a></li>
-        <li><a class="dropdown-item" href="/core/blendcountsheets">Blend Count Sheets</a></li>
-        <li><a class="dropdown-item" href="/core/blendstatistics">Blend Statistics</a></li>
+        <li><a class="dropdown-item" href="/core/chemical-shortages">Chemical Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
+        <li><a class="dropdown-item" href="/core/upcoming-counts">Blend Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/maxproduciblequantity">Max Producible Quantity</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="/core/blendschedule?blend_area=all">Scheduled Blends</a></li>
+        <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
     </ul>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="/core/checklistmgmt/">Forklift Reports</a>
+    <a class="nav-link" href="/core/checklist-management/">Forklift Reports</a>
 </li>
 <li class="nav-item">    
     <a class="nav-link" href="/admin">Admin</a>
