--- a/app/templates/navbars/forklift-group-navbar-items.html
+++ b/app/templates/navbars/forklift-group-navbar-items.html
@@ -1,17 +1,17 @@
 <li class="nav-item">
-    <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
+    <a class="nav-link" href="/core/forklift-checklist">Forklift Checklist</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="/prodverse/productionschedule">Production Schedule</a>
+    <a class="nav-link" href="/prodverse/production-schedule">Production Schedule</a>
 </li>
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Item Lookup
     </a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <li><a class="dropdown-item" href="/core/lookupitemquantity/">Item Quantity</a></li>
-    <li><a class="dropdown-item" href="/core/lookuplocation/">Chemical Location</a></li>
-    <li><a class="dropdown-item" href="/core/lookuplotnum/">Lot Numbers</a></li>
-    <li><a class="dropdown-item" href="/prodverse/specsheet-lookup/">Spec Sheets</a></li>
+    <ul class="dropdown-menu" aria-labelledby="itemLookupNavbarDropdown">
+        <li><a class="dropdown-item" href="/core/lookup-item-quantity/">Item Quantity</a></li>
+        <li><a class="dropdown-item" href="/core/lookup-location/">Chemical Location</a></li>
+        <li><a class="dropdown-item" href="/core/lookup-lot-numbers/">Lot Numbers</a></li>
+        <li><a class="dropdown-item" href="/prodverse/spec-sheet-lookup/">Spec Sheets</a></li>
     </ul>
 </li>
