--- a/app/core/templates/core/modals/add-lotnum-modal.html
+++ b/app/core/templates/core/modals/add-lotnum-modal.html
@@ -12,7 +12,7 @@
             {% if submitted %}
                 <a href='/core/lot-num-records'>View All Lot Numbers</a>
             {% else %}
-                <form action="/core/add-lot-num-record/lot-num-records" method=POST id="addLotNumFormElement">
+                <form action="/core/add-lot-num-record/?redirect-page=lot-num-records" method=POST id="addLotNumFormElement">
                     {% csrf_token %}
                     <table id="lotnumformtable">
                         {{ add_lot_form }}
