Resolve issues with report center.

--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -29,6 +29,7 @@
                             <option reportval="Count-History" class="reportOption">Count History</option>
                             <option reportval="Counts-Transactions" class="reportOption">Counts And Transactions</option>
                             <option reportval="Where-Used" class="reportOption">Where Used</option>
+                            <option reportval="Max-Producible-Quantity" class="reportOption">Max Producible Quantity</option>
                         </select>
                     </td>
                 </tr>
