--- a/app/core/templates/core/checklistmgmt.html
+++ b/app/core/templates/core/checklistmgmt.html
@@ -26,9 +26,11 @@
             <label for="ahaleEmail">Anthony Hale</label><br>
             <input class="recipientCheckBox" type="checkbox" id="jchandlerEmail" name="jchandlerEmail" value="jchandler@kinpakinc.com">
             <label for="jchandlerEmail">Joe Chandler</label><br>
+            <input class="recipientCheckBox" type="checkbox" id="pmedlinAltEmail" name="pmedlinAltEmail" value="pmedlinkinpakinc@gmail.com">
+            <label for="jchandlerEmail">Parker Medlin ALT</label><br>
         </div>
         <!-- 'pmedlin@kinpakinc.com,jdavis@kinpakinc.com,dfaucheux@kinpakinc.com,ddavis@kinpakinc.com,rprueitt@kinpakinc.com,ahale@kinpakinc.com,jchandler@kinpakinc.com' -->
-        
+        <!-- 'pmedlin@kinpakinc.com,jdavis@kinpakinc.com,park.medlin007@gmail.com,pmedlinkinpakinc@gmail.com,pmedlinkinpakinc2@gmail.com,pmedlinkinpakinc3@gmail.com'  -->
         <div>
             {% if daily_update_performed %}
                 <p>The checklist submission tracking table has been updated for today.</p>
